# rest-organizations

./: README.md  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 57d8f4a035bd_.py
backend/src/: config.py  database.py  exceptions.py  repositories.py
backend/src/auth/: utils.py
backend/src/organizations/: constants.py  models.py  repositories.py  router.py  schemas.py
