[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Matvey Mezhinskikh <axkiss@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.3"}
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.6.1"
asyncpg = "^0.30.0"
alembic = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
